@@ -22,15 +22,15 @@
 
 #include "AthenaMonitoring/AthenaMonManager.h"
 
-#include "TrigT1Calo/CPAlgorithm.h"
-#include "TrigT1Calo/CMMCPHits.h"
-#include "TrigT1Calo/CPMHits.h"
-#include "TrigT1Calo/CPMTower.h"
-#include "TrigT1Calo/CPMRoI.h"
-#include "TrigT1Calo/CoordToHardware.h"
-#include "TrigT1Calo/RODHeader.h"
-#include "TrigT1Calo/TriggerTower.h"
-#include "TrigT1Calo/TriggerTowerKey.h"
+#include "TrigT1CaloUtils/CPAlgorithm.h"
+#include "TrigT1CaloEvent/CMMCPHits.h"
+#include "TrigT1CaloEvent/CPMHits.h"
+#include "TrigT1CaloEvent/CPMTower.h"
+#include "TrigT1CaloEvent/CPMRoI.h"
+#include "TrigT1CaloUtils/CoordToHardware.h"
+#include "TrigT1CaloEvent/RODHeader.h"
+#include "TrigT1CaloEvent/TriggerTower.h"
+#include "TrigT1CaloUtils/TriggerTowerKey.h"
 #include "TrigT1CaloTools/IL1EmTauTools.h"
 #include "TrigT1CaloTools/IL1CPHitsTools.h"
 #include "TrigT1Interfaces/Coordinate.h"
