@@ -86,16 +86,16 @@
 #include <cstdlib>
 #include <utility>
 
-#include "TrigT1Calo/JetAlgorithm.h"
-#include "TrigT1Calo/CMMJetHits.h"
-#include "TrigT1Calo/JEMHits.h"
-#include "TrigT1Calo/JetElement.h"
-#include "TrigT1Calo/JEMRoI.h"
-#include "TrigT1Calo/CMMRoI.h"
-#include "TrigT1Calo/JEMEtSums.h"
-#include "TrigT1Calo/CMMEtSums.h"
-#include "TrigT1Calo/CoordToHardware.h"
-#include "TrigT1Calo/TriggerTower.h"
+#include "TrigT1CaloUtils/JetAlgorithm.h"
+#include "TrigT1CaloUtils/CoordToHardware.h"
+#include "TrigT1CaloEvent/CMMJetHits.h"
+#include "TrigT1CaloEvent/JEMHits.h"
+#include "TrigT1CaloEvent/JetElement.h"
+#include "TrigT1CaloEvent/JEMRoI.h"
+#include "TrigT1CaloEvent/CMMRoI.h"
+#include "TrigT1CaloEvent/JEMEtSums.h"
+#include "TrigT1CaloEvent/CMMEtSums.h"
+#include "TrigT1CaloEvent/TriggerTower.h"
 #include "TrigT1CaloTools/IL1JEPHitsTools.h"
 #include "TrigT1CaloTools/IL1JetTools.h"
 #include "TrigT1CaloTools/IL1JetElementTools.h"
