@@ -22,14 +22,14 @@
 
 #include "AthenaMonitoring/AthenaMonManager.h"
 
-#include "TrigT1Calo/CMMCPHits.h"
-#include "TrigT1Calo/CoordToHardware.h"
-#include "TrigT1Calo/CPMHits.h"
-#include "TrigT1Calo/CPMTower.h"
-#include "TrigT1Calo/CPMRoI.h"
-#include "TrigT1Calo/DataError.h"
-#include "TrigT1Calo/TriggerTower.h"
-#include "TrigT1Calo/TriggerTowerKey.h"
+#include "TrigT1CaloEvent/CMMCPHits.h"
+#include "TrigT1CaloEvent/CPMHits.h"
+#include "TrigT1CaloEvent/CPMTower.h"
+#include "TrigT1CaloEvent/CPMRoI.h"
+#include "TrigT1CaloEvent/TriggerTower.h"
+#include "TrigT1CaloUtils/CoordToHardware.h"
+#include "TrigT1CaloUtils/DataError.h"
+#include "TrigT1CaloUtils/TriggerTowerKey.h"
 #include "TrigT1Interfaces/CoordinateRange.h"
 #include "TrigT1Interfaces/CPRoIDecoder.h"
 #include "TrigT1Interfaces/TrigT1CaloDefs.h"
